samples/_failures_safe/1761652087_d1e1cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56c56f1e.c: In function ‘main’:
./samples/SAFE/__tmp_56c56f1e.c:147:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  147 |         for (int i
      |         ^~~
./samples/SAFE/__tmp_56c56f1e.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_56c56f1e.c:147:9: error: expected declaration or statement at end of input
